PRL-6717 - AHR - Fix to remove special characters from party phone number before sending to HMC